dist/1.0/bin/sample/retrieveUnpackaged/objects/Task_Dependency__c.object
<CustomObject>
    <description>Manages the dependency relationship between two task object instances.  These dependency instances are created when recursing through the task definitions as part of initiating a prov Plan OR by adding task dependencies ad hoc in support of Service Delivery Jeopardy scenarios or other dynamic workflows</description>
    <fields>
        <fullName>Dependency_Action__c</fullName>
        <description>Tells the dependent object what to do when all predecessors are closed</description>
        <label>Dependency Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependency_Task__c</fullName>
        <description>This field is populated with the rowid to the activity needed to proceed in the workflow as a result of action.  Hack to support a lookup relationship to activity object in support of workflow</description>
        <externalId>true</externalId>
        <label>Dependency Task</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task__c</fullName>
        <description>Hack to support a lookup to Activity from a Custom Object</description>
        <externalId>true</externalId>
        <label>Predecessor Task</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <label>Workflow</label>
        <referenceTo>Workflow__c</referenceTo>
        <relationshipLabel>Task Dependencies</relationshipLabel>
        <relationshipName>Task_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task Dependency</label>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>